Library override loosing data block crashes and corrupts the scene -reproducible #75730

Closed
opened 2020-04-14 17:43:18 +02:00 by martin Naydenski · 12 comments

System Information
Operating system: Manjaro / Windows 10 - 64 bit
Graphics card: tested on both ATI R7 370 and Nvidia cards. (don't think its graphic related :))

Blender Version
Broken: 2.82 official - 2.82v7 and 2.82a
Worked: Not sure

Short description of error
After linking a collection with asset to your scene and making relations -> library override -> adding modifier and saving your scene - works. Then delete the modified you just added and save the scene to another place -> crashes and cannot open the scene. Seems like the data block of the modifier once created messes up if deleted on loading the scene.

To reproduce the error

  1. Create a cube, and extract some faces or make some changes to if you want. Then save the scene to AssetReference and close.

  2. New scene, delete all objects and Link your AssetReference scene the main collection then Make Library Override on the cube object. Save the scene to Master_v01

  3. Add Subdiv Surf to the linked cube in Master_v01 and save. Reopening the scene now opens correctly with the cube with added Subdiv Surf...

  4. Remove the Subdiv modifier of the cube and save as Master_v2.

  5. The scene Master_v2 cannot open and crashes Blender.

Based on the default startup or an attached .blend file (as simple as possible).AssetReference.blend

Master_v02.blend

Master_v01.blend

**System Information** Operating system: Manjaro / Windows 10 - 64 bit Graphics card: tested on both ATI R7 370 and Nvidia cards. (don't think its graphic related :)) **Blender Version** Broken: 2.82 official - 2.82v7 and 2.82a Worked: Not sure **Short description of error** After linking a collection with asset to your scene and making relations -> library override -> adding modifier and saving your scene - works. Then delete the modified you just added and save the scene to another place -> crashes and cannot open the scene. Seems like the data block of the modifier once created messes up if deleted on loading the scene. **To reproduce the error** 1. Create a cube, and extract some faces or make some changes to if you want. Then save the scene to AssetReference and close. 2. New scene, delete all objects and Link your AssetReference scene the main collection then Make Library Override on the cube object. Save the scene to Master_v01 3. Add Subdiv Surf to the linked cube in Master_v01 and save. Reopening the scene now opens correctly with the cube with added Subdiv Surf... 4. Remove the Subdiv modifier of the cube and save as Master_v2. 5. The scene Master_v2 cannot open and crashes Blender. Based on the default startup or an attached .blend file (as simple as possible).[AssetReference.blend](https://archive.blender.org/developer/F8471518/AssetReference.blend) [Master_v02.blend](https://archive.blender.org/developer/F8471519/Master_v02.blend) [Master_v01.blend](https://archive.blender.org/developer/F8471520/Master_v01.blend)

Added subscriber: @martinium

Added subscriber: @martinium

#74574 was marked as duplicate of this issue

#74574 was marked as duplicate of this issue
martin Naydenski changed title from Library override loosing crashes and corrupts the scene -reproducible to Library override loosing data block crashes and corrupts the scene -reproducible 2020-04-14 17:43:50 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Confirmed, checking...

Confirmed, checking...
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

Asserts here:

BLI_assert failed: /blender/makesrna/intern/rna_object.c:1628, rna_Object_modifiers_override_apply(), at 'mod_src != ((void *)0)'

1   raise                                                                     0x7ffff132f625 
2   abort                                                                     0x7ffff13188d9 
3   rna_Object_modifiers_override_apply   rna_object.c                  1628  0x340481e      
4   rna_property_override_operation_apply rna_access_compare_override.c 556   0x3308684      
5   rna_property_override_apply_ex        rna_access_compare_override.c 965   0x33092ce      
6   RNA_struct_override_apply             rna_access_compare_override.c 1022  0x33094ce      
7   BKE_lib_override_library_update       lib_override.c                811   0x2abbce1      
8   BKE_lib_override_library_main_update  lib_override.c                846   0x2abbe21      
9   blo_read_file_internal                readfile.c                    10378 0x2ef2e9d      
10  BLO_read_from_file                    readblenentry.c               320   0x2ed69a5      
11  BKE_blendfile_read                    blendfile.c                   425   0x3b6d652      
12  WM_file_read                          wm_files.c                    639   0x2e9b52c      
13  wm_file_read_opwrap                   wm_files.c                    2110  0x2e9e7c6      
14  wm_open_mainfile__open                wm_files.c                    2252  0x2e9ed2b      
15  operator_state_dispatch               wm_files.c                    2146  0x2e9e908      
16  wm_open_mainfile_dispatch             wm_files.c                    2278  0x2e9edd4      
17  wm_open_mainfile__discard_changes     wm_files.c                    2192  0x2e9eabf      
18  operator_state_dispatch               wm_files.c                    2146  0x2e9e908      
19  wm_open_mainfile_dispatch             wm_files.c                    2278  0x2e9edd4      
20  wm_open_mainfile_invoke               wm_files.c                    2283  0x2e9edfd      

Same is true for constraints.

@mont29: not sure about the status here: is this expected to be supported? Should the IDOverrideLibraryPropertyOperation be removed when removing the modifier/constraint?

Asserts here: > BLI_assert failed: /blender/makesrna/intern/rna_object.c:1628, rna_Object_modifiers_override_apply(), at 'mod_src != ((void *)0)' ``` 1 raise 0x7ffff132f625 2 abort 0x7ffff13188d9 3 rna_Object_modifiers_override_apply rna_object.c 1628 0x340481e 4 rna_property_override_operation_apply rna_access_compare_override.c 556 0x3308684 5 rna_property_override_apply_ex rna_access_compare_override.c 965 0x33092ce 6 RNA_struct_override_apply rna_access_compare_override.c 1022 0x33094ce 7 BKE_lib_override_library_update lib_override.c 811 0x2abbce1 8 BKE_lib_override_library_main_update lib_override.c 846 0x2abbe21 9 blo_read_file_internal readfile.c 10378 0x2ef2e9d 10 BLO_read_from_file readblenentry.c 320 0x2ed69a5 11 BKE_blendfile_read blendfile.c 425 0x3b6d652 12 WM_file_read wm_files.c 639 0x2e9b52c 13 wm_file_read_opwrap wm_files.c 2110 0x2e9e7c6 14 wm_open_mainfile__open wm_files.c 2252 0x2e9ed2b 15 operator_state_dispatch wm_files.c 2146 0x2e9e908 16 wm_open_mainfile_dispatch wm_files.c 2278 0x2e9edd4 17 wm_open_mainfile__discard_changes wm_files.c 2192 0x2e9eabf 18 operator_state_dispatch wm_files.c 2146 0x2e9e908 19 wm_open_mainfile_dispatch wm_files.c 2278 0x2e9edd4 20 wm_open_mainfile_invoke wm_files.c 2283 0x2e9edfd ``` Same is true for constraints. @mont29: not sure about the status here: is this expected to be supported? Should the IDOverrideLibraryPropertyOperation be removed when removing the modifier/constraint?
Bastien Montagne self-assigned this 2020-04-15 15:00:07 +02:00

Thi should be supported yes, will check.

Thi should be supported yes, will check.

This issue was referenced by e3d575b376

This issue was referenced by e3d575b37651b20b281f431047d97b43c0ce028d

This issue was referenced by 81bb2a143c

This issue was referenced by 81bb2a143c5e9cb5885717b7f1dca84fdba41c0b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscribers: @TalHershkovich, @mano-wii, @ankitm

Added subscribers: @TalHershkovich, @mano-wii, @ankitm
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:38:05 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75730
No description provided.