Fix T75730: Crash on read of liboverride data when missing source modifier.

While this should not happen, we still want to handle those errors
gracefully from user perspective (i.e. assert for devs, no crash for
users).

Actual fix of root cause of the issue will come later.